--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "go-gen",
   "version": "1.0.0",
-  "description": "一款强大的 TypeScript API 代码生成器，支持从 API 响应或 OpenAPI 文档一键生成 TypeScript 接口代码和类型定义",
+  "description": "一款 TypeScript API 代码生成器，支持从 API 响应或 OpenAPI 文档一键生成 TypeScript 接口代码和类型定义",
   "bin": {
     "go-gen": "./bin/index.js"
   },
