--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "lint": "eslint core/**/*.js"
+    "lint": "eslint core/**/*.js",
+    "prepare": "husky install"
   },
   "keywords": [
     "quicktype",
@@ -21,10 +22,21 @@
   "license": "MIT",
   "author": "goGenger",
   "email": "bg2582266166@gmail.com",
+  "lint-staged": {
+    "**/*.{js}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  },
   "devDependencies": {
+    "eslint": "^8.47.0",
     "jest": "^29.6.0",
     "nock": "^13.3.3",
-    "eslint": "^8.47.0"
+    "prettier": "^3.7.4",
+    "lint-staged": "^16.2.7",
+    "husky": "^9.1.7",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4"
   },
   "dependencies": {
     "@darkobits/lolcatjs": "3.1.3",
