--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
       "eslint --fix"
     ]
   },
+  "files": [
+    "dist",
+    "bin",
+    "README.md",
+    "LICENSE"
+  ],
   "devDependencies": {
     "eslint": "^8.47.0",
     "jest": "^29.6.0",
@@ -48,7 +54,8 @@
     "openapi-sampler": "^1.6.2",
     "ora": "^5.4.1",
     "quicktype-core": "^23.2.6",
-    "shelljs": "^0.10.0"
+    "shelljs": "^0.10.0",
+    "prompts": "^2.4.2"
   },
   "engines": {
     "node": ">=20.0.0"
