chore: 更新包名从go-gen到@gogenger/go-gen
更新README和CI配置文件中所有go-gen的引用，统一使用新的包名@gogenger/go-gen

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Test installation
         run: |
           npm pack
-          npm install -g go-gen-*.tgz
+          npm install -g @gogenger/go-gen-*.tgz
           go-gen --version
           go-gen --help
 
