chore: 更新配置文件和代码格式
更新 .prettierignore 以忽略更多文件类型
将 .eslintrc.js 的 ecmaVersion 设置为 'latest'
扩展 jest.config.js 的覆盖率收集范围
在 package.json 中添加格式化和检查脚本
统一 utils/load-openapi.js 中的引号格式

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "lint": "eslint core/**/*.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "keywords": [
     "quicktype",
