--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,15 +21,17 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
+          cache: 'yarn'
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Run tests
-        run: npm test
+        run: yarn test
 
       - name: Build
-        run: npm run build --if-present
+        run: yarn build
+        continue-on-error: true
 
       - name: Get version from tag
         id: get_version
@@ -56,7 +58,7 @@ jobs:
           prerelease: false
 
       - name: Publish to npm
-        run: npm publish
+        run: yarn publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
@@ -75,11 +77,12 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@goGenger'
+          cache: 'yarn'
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Publish to GitHub Packages
-        run: npm publish
+        run: yarn publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
