--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       # 允许部分失败，不会取消其他任务
       fail-fast: false
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [20.x]
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
