--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,91 +10,76 @@ jobs:
   test:
     name: Test on Node ${{ matrix.node-version }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
-
     strategy:
-      # 允许部分失败，不会取消其他任务
       fail-fast: false
       matrix:
         node-version: [20.x]
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
-
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-
-      - name: Run tests
-        run: yarn test
-        continue-on-error: false
+          cache: yarn
+      - run: yarn install --frozen-lockfile
+      - run: yarn test
 
       - name: Upload coverage
         uses: codecov/codecov-action@v3
-        if: matrix.os == 'ubuntu-latest' && matrix.node-version == '20.x'
-        continue-on-error: true
+        if: matrix.os == 'ubuntu-latest'
         with:
           files: ./coverage/lcov.info
-          flags: unittests
-          name: codecov-umbrella
 
   lint:
     name: Lint and Format Check
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
-          cache: 'yarn'
-
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-
-      - name: Run lint
-        run: yarn lint
-        continue-on-error: true
-
-      - name: Run format check
-        run: yarn format:check
-        continue-on-error: true
+          node-version: 20.x
+          cache: yarn
+      - run: yarn install --frozen-lockfile
+      - run: yarn lint
+      - run: yarn format:check
 
   build:
     name: Build and Install Test
     runs-on: ubuntu-latest
-    needs: test
-
+    needs: [test]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
-          cache: 'yarn'
-
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-
-      - name: Build (if build script exists)
-        run: yarn build
-        continue-on-error: true
-
-      - name: Pack and test installation
-        run: |
+          node-version: 20.x
+          cache: yarn
+      - run: yarn install --frozen-lockfile
+      - run: |
           yarn pack
           PACKAGE=$(ls gogenger-go-gen-*.tgz)
           yarn global add file:$PWD/$PACKAGE
           go-gen --version
-          go-gen --help
+
+  release:
+    name: Release to npm
+    runs-on: ubuntu-latest
+    needs: [test, lint]
+    if: github.event_name == 'push'
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          registry-url: https://registry.npmjs.org/
+
+      - run: yarn install --frozen-lockfile
+
+      - name: Release
+        run: yarn release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
