--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@gogenger/go-gen",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "一款 TypeScript API 代码生成器，支持从 API 响应或 OpenAPI 文档一键生成 TypeScript 接口代码和类型定义",
   "bin": {
     "go-gen": "./bin/index.js"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "test": "jest --coverage",
@@ -11,7 +14,8 @@
     "lint": "eslint core/**/*.js",
     "prepare": "husky install",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "release": "semantic-release"
   },
   "keywords": [
     "quicktype",
@@ -24,6 +28,14 @@
   "license": "MIT",
   "author": "goGenger",
   "email": "bg2582266166@gmail.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gogenger/go-gen"
+  },
+  "homepage": "https://github.com/gogenger/go-gen#readme",
+  "bugs": {
+    "url": "https://github.com/gogenger/go-gen/issues"
+  },
   "lint-staged": {
     "**/*.{js}": [
       "prettier --write",
@@ -40,14 +52,20 @@
     "CHANGELOG.md"
   ],
   "devDependencies": {
+    "@semantic-release/changelog": "6",
+    "@semantic-release/commit-analyzer": "11",
+    "@semantic-release/git": "10",
+    "@semantic-release/npm": "11",
+    "@semantic-release/release-notes-generator": "12",
     "eslint": "^8.47.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
     "jest": "^29.6.0",
+    "lint-staged": "^16.2.7",
     "nock": "^13.3.3",
     "prettier": "^3.7.4",
-    "lint-staged": "^16.2.7",
-    "husky": "^9.1.7",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4"
+    "semantic-release": "22"
   },
   "dependencies": {
     "@darkobits/lolcatjs": "3.1.3",
@@ -58,9 +76,9 @@
     "node-fetch": "^2.7.0",
     "openapi-sampler": "^1.6.2",
     "ora": "^5.4.1",
+    "prompts": "^2.4.2",
     "quicktype-core": "^23.2.6",
-    "shelljs": "^0.10.0",
-    "prompts": "^2.4.2"
+    "shelljs": "^0.10.0"
   },
   "engines": {
     "node": ">=20.0.0"
