--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,3 +102,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Debug npm auth
+        run: |
+          npm whoami || true
+          npm config get registry
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
