ci: 更新 npm 认证配置，使用 NODE_AUTH_TOKEN 替代 NPM_TOKEN
统一使用 NODE_AUTH_TOKEN 环境变量进行 npm 认证
移除冗余的 npm 认证设置步骤

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,19 +93,18 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.x
-          registry-url: https://registry.npmjs.org/
+          registry-url: 'https://registry.npmjs.org'
 
       - run: yarn install --frozen-lockfile
 
       - name: Debug npm auth
         run: |
-          npm whoami || true
-          npm config get registry
+          npm whoami
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Release
         run: yarn release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
