--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
   "email": "bg2582266166@gmail.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/gogenger/go-gen"
+    "url": "https://github.com/goGenger/go-gen"
   },
-  "homepage": "https://github.com/gogenger/go-gen#readme",
+  "homepage": "https://github.com/goGenger/go-gen#readme",
   "bugs": {
-    "url": "https://github.com/gogenger/go-gen/issues"
+    "url": "https://github.com/goGenger/go-gen/issues"
   },
   "lint-staged": {
     "**/*.{js}": [
