refactor(core): 优化代码格式和错误提示信息
统一代码缩进和对象字面量格式，改进冲突类型重命名的提示信息
在package.json中添加eslint修复脚本

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prepare": "husky install",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "fix": "eslint --fix ."
   },
   "keywords": [
     "quicktype",
